# pc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
compiler/: CMakeLists.txt  codegen.cpp  compstate.cpp  config.h  entity.cpp  lits.h  misc.cpp  primalc.cpp  primalc.h  resolve.cpp  source.cpp  symtable.cpp  tables.h  token.cpp  unit.cpp
compiler/templates/: plconfig.yaml  primalcmake.txt
compiler/templates/lib/src/: main.pc
doc/: cppthoughts.md  lang.md  setup.md
libbase/: CMakeLists.txt
libbase/include/: cmdline.h  parse.h  persist.h  sys.h  util.h  var.h
libbase/src/: parse.cpp  persist.cpp  sys.cpp  util.cpp  var.cpp
libbase/test/parser/: main.cpp
libbase/test/parser/data/: test1.yaml  test2.yaml
libbase/test/ptest/: tests.h  tests1.cpp  tests2.cpp
runtime/: CMakeLists.txt
runtime/baseunit/: CMakeLists.txt  unit.yaml
runtime/baseunit/src/: main.pc  str.pc  vec.pc
runtime/pcrt/: CMakeLists.txt
runtime/pcrt/include/: pcrt.h  plarr.h  plbase.h  pldef.h  plmem.h  plobj.h  plstr.h
runtime/pcrt/src/: arr.cpp  mem.cpp  os.cpp  strings.cpp
runtime/test/: CMakeLists.txt
runtime/test/helloworld/: helloworld.cpp
runtime/test/prplayg/: prplayg.cpp
runtime/test/rttest/: arrtest.cpp  reftest.cpp  tests.h  ytest.h
samples/control/: unit.yaml
samples/control/src/: main.pc
samples/helloworld/: unit.yaml
samples/interface/: unit.yaml
samples/interface/src/: main.pc
samples/objects/: unit.yaml
samples/objects/src/: impl2.pc  impl3.pc  main.pc
samples/vector/: unit.yaml
samples/vector/src/: main.pc
script/: bld.cmd  bld.sh  cm.cmd  cm.sh  install.cmd  install.sh
support/vscode/priml/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
support/vscode/priml/syntaxes/: priml.tmLanguage.json
